Add extension to trigger directus-sync on schema changes and startup

--- a/.env
+++ b/.env
@@ -359,3 +359,17 @@ EMAIL_SENDMAIL_PATH="/usr/sbin/sendmail"
 
 ## Email (SendGrid Transport)
 # EMAIL_SENDGRID_API_KEY="key-1234123412341234"
+
+
+####################################################################################################
+### Extended vars for auto pull/push directus-sync 
+
+# directus-sync config file path
+# DIRECTUS_SYNC_CONFIG_PATH="./custom-directus-sync/config.cjs"
+
+# Run `npx directus-sync pull` on schema changes 
+DIRECTUS_SYNC_AUTO_PULL=true
+
+# Run `npx directus-sync push` on startup
+DIRECTUS_SYNC_AUTO_PUSH=true
+
